--- a/angular/src/app/request-assign/request-assign.component.html
+++ b/angular/src/app/request-assign/request-assign.component.html
@@ -123,6 +123,24 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <div class="col-md-6 mt-3">
+                                        <div class="form-group row mb-0">
+                                            <label class="col-md-3 col-form-label" for="ADDRESS">
+                                                {{ "TownShip" | localize }}
+                                            </label>
+                                            <div class="col-md-8">
+                                                <select name="townShipId"
+                                                        class="form-control"
+                                                        id="townShipId" [(ngModel)]="townShipId"
+                                                        #townShipIdModel="ngModel">
+                                                    <option *ngFor="let townShip of allTownShips" [value]="townShip.id">{{townShip.name}}</option>
+                                                </select>
+
+
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
