--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -59,7 +59,7 @@
                             {{ "RequestRejected" | localize }}
                         </button>
 
-                        <button  *ngIf="request.id>0  &&isGranted('Pages.Manage.Contractor')" type="button"
+                        <button  *ngIf="request.id>0  && request.status !=7 && isGranted('Pages.Manage.Contractor')" type="button"
                                 (click)="save(7)"
                                 [disabled]="!createRequestForm.form.valid || saving"
                                 class="btn btn-danger  mr-3"
