--- a/angular/src/app/inspection-test/inspection-test.component.html
+++ b/angular/src/app/inspection-test/inspection-test.component.html
@@ -127,12 +127,12 @@
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "Edit" | localize }}
                                         </button>
-                                        <button type="button"
+                                        <!--<button type="button"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(inspectionTest)">
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
-                                        </button>
+                                        </button>-->
 
                                     </td>
                                 </tr>
