--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -194,12 +194,12 @@
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "ProjectDetails" | localize }}
                                         </button>
-                                        <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
+                                        <!--<button type="button" *ngIf="isGranted('Pages.Manage.Project')"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(project)">
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
-                                        </button>
+                                        </button>-->
 
                                     </td>
                                 </tr>
