--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -498,7 +498,8 @@
                                             <th>{{ "Name" | localize }}</th>
                                             <th>{{ "Code" | localize }}</th>
                                             <th>{{ "Cost" | localize }}</th>
-                                            <th style="width: 310px;" *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1"></th>
+                                            <th>{{ "HaveResult" | localize }}</th>
+                                            <th style="width: 310px;"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -506,9 +507,24 @@
                                             <td>{{ requestTest.name }}</td>
                                             <td>{{ requestTest.code }}</td>
                                             <td>{{ requestTest.cost}}</td>
-                                            <td *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1">
+                                            <td>
+                                                <div class="custom-control custom-checkbox">
+                                                    <input type="checkbox"
+                                                           class="custom-control-input"
+                                                           disabled
+                                                           [checked]="requestTest.haveResult" />
+                                                    <label class="custom-control-label"></label>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <button type="button" *ngIf="isGranted('Pages.Manage.Observer') && request.status==6"
+                                                        class="btn btn-sm bg-success mx-2"
+                                                        (click)="addTest(requestTest.id,requestTest.code,requestTest.isLab)">
+                                                    <i class="fa fa-microscope"></i>
+                                                    {{ "Tests" | localize }}
+                                                </button>
 
-                                                <button type="button"
+                                                <button type="button" *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1"
                                                         class="btn btn-sm bg-danger mx-2"
                                                         (click)="delete(requestTest)">
                                                     <i class="fas fa-trash"></i>
