--- a/angular/src/app/requests/concrete-field/concrete-field.component.html
+++ b/angular/src/app/requests/concrete-field/concrete-field.component.html
@@ -40,8 +40,8 @@
                                 <div class="col-md-9">
                                     <input type="date"
                                            class="form-control"
-                                           name="samplePreparationEndDate"
-                                           id="samplePreparationEndDate"
+                                           name="samplePreparationEndDate1"
+                                           id="samplePreparationEndDate1"
                                            style="text-align: right;"
                                            [(ngModel)]="samplePreparationEndDatemodel" />
 
@@ -76,9 +76,9 @@
                                 <div class="col-md-9">
                                     <input type="text"
                                            class="form-control"
-                                           name="cylindersReceivedNo"
-                                           id="cylindersReceivedNo"
-                                           [(ngModel)]="requestTest.cylindersReceivedNo" />
+                                           name="landingGear"
+                                           id="landingGear"
+                                           [(ngModel)]="requestTest.landingGear" />
 
                                 </div>
                             </div>
