--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -523,7 +523,7 @@
                                                         class="btn btn-sm bg-success mx-2"
                                                         (click)="addTest(requestTest.id,requestTest.code,requestTest.isLab,requestTest.formCode)">
                                                     <i class="fa fa-microscope"></i>
-                                                    {{ "Tests" | localize }}
+                                                    {{ "TestsResult" | localize }}
                                                 </button>
 
                                                 <button type="button" *ngIf="isGranted('Pages.Manage.Contractor') && request.status==1"
