--- a/angular/src/app/requests/asphalt-field/asphalt-field.component.html
+++ b/angular/src/app/requests/asphalt-field/asphalt-field.component.html
@@ -3,7 +3,7 @@
       autocomplete="off"
       #createUserModal="ngForm"
       (ngSubmit)="save()">
-    <abp-modal-header [title]="'RC2/MC1' | localize"
+    <abp-modal-header [title]="'Asphalt T310' | localize"
                       (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
     <div class="modal-body">
         <section class="content px-2">
