--- a/angular/src/app/project/create-project/create-project.component.html
+++ b/angular/src/app/project/create-project/create-project.component.html
@@ -24,22 +24,22 @@
             </div>
         </div>
         <!--<div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
-                {{ "Description" | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="text"
-                       class="form-control"
-                       name="description"
-                       id="description"
-                       required
-                       [(ngModel)]="project.description"
-                       #descriptionModel="ngModel"
-                       #descriptionE1 />
-                <abp-validation-summary [control]="descriptionModel"
-                                        [controlEl]="descriptionE1"></abp-validation-summary>
-            </div>
-        </div>-->
+        <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
+            {{ "Description" | localize }}
+        </label>
+        <div class="col-md-9">
+            <input type="text"
+                   class="form-control"
+                   name="description"
+                   id="description"
+                   required
+                   [(ngModel)]="project.description"
+                   #descriptionModel="ngModel"
+                   #descriptionE1 />
+            <abp-validation-summary [control]="descriptionModel"
+                                    [controlEl]="descriptionE1"></abp-validation-summary>
+        </div>
+    </div>-->
 
         <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
@@ -69,7 +69,6 @@
                        class="form-control"
                        name="startDate"
                        id="startDate"
-                     
                        required
                        [(ngModel)]="project.startDate"
                        #startDateModel="ngModel"
@@ -104,7 +103,7 @@
             </label>
             <div class="col-md-9">
                 <input type="date"
-                         [min]="project.startDate"
+                       [min]="project.startDate"
                        class="form-control"
                        name="siteDelivedDate"
                        id="siteDelivedDate"
@@ -166,7 +165,7 @@
                         class="form-control"
                         id="DepartmentId" [(ngModel)]="project.departmentId"
                         #departmentIdModel="ngModel"
-                        #departmentId >
+                        #departmentId>
                     <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
                 </select>
 
@@ -231,22 +230,22 @@
         </div>
 
         <!--<div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="ADDRESS">
-                {{ "LabProjectManager" | localize }}
-            </label>
-            <div class="col-md-9">
-                <select name="LabProjectManagerId"
-                        class="form-control"
-                        id="LabProjectManagerId" [(ngModel)]="project.labProjectManagerId"
-                        #labProjectManagerIdModel="ngModel"
-                        #labProjectManagerId required>
-                    <option *ngFor="let projectManager of projectManagers" [value]="projectManager.id">{{projectManager.name}}</option>
-                </select>
+        <label class="col-md-3 col-form-label" for="ADDRESS">
+            {{ "LabProjectManager" | localize }}
+        </label>
+        <div class="col-md-9">
+            <select name="LabProjectManagerId"
+                    class="form-control"
+                    id="LabProjectManagerId" [(ngModel)]="project.labProjectManagerId"
+                    #labProjectManagerIdModel="ngModel"
+                    #labProjectManagerId required>
+                <option *ngFor="let projectManager of projectManagers" [value]="projectManager.id">{{projectManager.name}}</option>
+            </select>
 
-                <abp-validation-summary [control]="labProjectManagerIdModel"
-                                        [controlEl]="labProjectManagerId"></abp-validation-summary>
-            </div>
-        </div>-->
+            <abp-validation-summary [control]="labProjectManagerIdModel"
+                                    [controlEl]="labProjectManagerId"></abp-validation-summary>
+        </div>
+    </div>-->
 
         <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="ADDRESS">
@@ -265,7 +264,18 @@
                                         [controlEl]="supervisingQualityId"></abp-validation-summary>
             </div>
         </div>
-
+        <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="ADDRESS">
+                {{ "Map" | localize }}
+            </label>
+            <div class="col-md-9">
+                <input type="text" class="form-control"
+                       id="mapUrl" (paste)="setMapLanAndLog($event)">
+            </div>
+        </div>
+        <div class="col-12">
+            <div #mapContainer id="map" style="width: 100%; height:250px;"></div>
+        </div>
 
     </div>
     <abp-modal-footer [cancelDisabled]="saving"
