--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -34,12 +34,12 @@
                         </button>
                         <!--(request.status ==3 && isGranted('Pages.Manage.LabProjectManager')) ||-->
                         <!--<button style="background-color: #ffc107" *ngIf=" (project.status ==1 && project.supervisingQualityId === appSession.userId) || (project.status ==1 && isGranted('Pages.Roles')) " type="button"
-            [disabled]="!createUserModal.form.valid || saving"
-            (click)="save(2)"
-            class="btn btn-success"
-            aria-label="Close">
-        {{ "Approved" | localize }}
-    </button>-->
+                                [disabled]="!createUserModal.form.valid || saving"
+                                (click)="save(2)"
+                                class="btn btn-success"
+                                aria-label="Close">
+                            {{ "Approved" | localize }}
+                        </button>-->
 
                         <button style="background-color: #ffc107" *ngIf="(project.status ==1 && (isGranted('Pages.Manage.LabProjectManager')|| isGranted('Pages.Manage.SupervisingQuality'))) ||  (project.status ==1 && isGranted('Pages.Roles')) " type="button"
                                 [disabled]="!createUserModal.form.valid || saving"
@@ -90,22 +90,22 @@
                                 </div>
                             </div>
                             <!--<div class="form-group row required col-6">
-                    <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
-                        {{ "Description" | localize }}
-                    </label>
-                    <div class="col-md-9">
-                        <input type="text"
-                               class="form-control"
-                               name="description"
-                               id="description"
-                               required
-                               [(ngModel)]="project.description"
-                               #descriptionModel="ngModel"
-                               #descriptionE1 />
-                        <abp-validation-summary [control]="descriptionModel"
-                                                [controlEl]="descriptionE1"></abp-validation-summary>
-                    </div>
-                </div>-->
+                                <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
+                                    {{ "Description" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <input type="text"
+                                           class="form-control"
+                                           name="description"
+                                           id="description"
+                                           required
+                                           [(ngModel)]="project.description"
+                                           #descriptionModel="ngModel"
+                                           #descriptionE1 />
+                                    <abp-validation-summary [control]="descriptionModel"
+                                                            [controlEl]="descriptionE1"></abp-validation-summary>
+                                </div>
+                            </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
@@ -132,7 +132,6 @@
                                 </label>
                                 <div class="col-md-9">
                                     <input type="date"
-                                        
                                            class="form-control"
                                            name="startDate"
                                            id="startDate"
@@ -335,6 +334,19 @@
                                                             [controlEl]="supervisingQualityId"></abp-validation-summary>
                                 </div>
                             </div>
+
+                            <div class="form-group row col-10">
+                                <label class="col-md-2 col-form-label" for="ADDRESS">
+                                    {{ "Map" | localize }}
+                                </label>
+                                <div class="col-md-10">
+                                    <input type="text" class="form-control"
+                                           id="mapUrl" (paste)="setMapLanAndLog($event)">
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div #mapContainer id="map" style="width: 92%; height:250px;"></div>
+                            </div>
                         </div>
                         <button type="submit" *ngIf="isGranted('Pages.Manage.Project')&& project.status==-1"
                                 [disabled]="!createUserModal.form.valid || saving"
@@ -531,7 +543,9 @@
                                     <tbody>
                                         <tr *ngFor="let attachment of attachments">
                                             <!--<td><a  href="{{baseURL+attachment.fileURL}}" download> {{ baseURL+attachment.fileURL}}</a></td>-->
+                                            t.
                                             <td>{{ attachment.description }}</td>
+                                            }}
                                             <td>
                                                 <button type="button" (click)="downloadMyFile(baseURL+attachment.fileURL,attachment.fileName)"
                                                         class="btn btn-sm bg-secondary">
