--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -538,7 +538,11 @@
                                 </table>
                             </div>
                         </tab>
-
+                        <tab *ngIf="showTabs" [heading]="'ProjectLocation' | localize" class="pt-3 px-2">
+                            <div class="col-12">
+                                <div #mapContainer id="map" style="width: 92%; height:250px;"></div>
+                            </div>
+                        </tab>
                         <tab *ngIf="showTabs" [heading]="'ProjectItems' | localize" class="pt-3 px-2">
                             <form class="form-horizontal" *ngIf="request.status==1"
                                   autocomplete="off"
@@ -605,7 +609,7 @@
                             </div>
                         </tab>
                         <tab *ngIf="showTabs" [heading]="'Attachments' | localize" class="pt-3 px-2">
-                            <form class="form-horizontal" 
+                            <form class="form-horizontal"
                                   autocomplete="off"
                                   #attachmentForm="ngForm"
                                   (ngSubmit)="saveAttachment()">
@@ -616,7 +620,7 @@
                                             {{ "Attachment" | localize }}
                                         </label>
                                         <div class="col-md-8">
-                                            <input type="file"  accept="application/pdf, image/*"
+                                            <input type="file" accept="application/pdf, image/*"
                                                    class="form-control"
                                                    name="attachmentFile"
                                                    id="attachmentFile"
@@ -649,7 +653,7 @@
                                     </div>
 
 
-                                    <button type="button" 
+                                    <button type="button"
                                             [disabled]="!attachmentForm.form.valid || saving"
                                             class="btn btn-primary" style="margin-right: 14px"
                                             (click)="saveAttachment()"
