--- a/angular/src/app/requests/request-view/request-view.component.html
+++ b/angular/src/app/requests/request-view/request-view.component.html
@@ -417,7 +417,11 @@
                                 </table>
                             </div>
                         </tab>
-
+                        <tab [heading]="'ProjectLocation' | localize" class="pt-3 px-2">
+                            <div class="col-12">
+                                <div #mapContainer id="map" style="width: 92%; height:250px;"></div>
+                            </div>
+                        </tab>
                         <tab [heading]="'ProjectItems' | localize" class="pt-3 px-2">
 
                             <div class="table-responsive">
@@ -443,7 +447,7 @@
                         </tab>
 
                         <tab [heading]="'Attachments' | localize" class="pt-3 px-2">
-                            
+
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered">
                                     <thead class="bg-light">
@@ -464,11 +468,11 @@
                                                     {{ "Download" | localize }}
                                                 </button>
                                                 <!--<button type="button" *ngIf="isGranted('Pages.Manage.Contractor')"
-                                                        class="btn btn-sm bg-danger mx-2"
-                                                        (click)="deleteAttachment(attachment)">
-                                                    <i class="fas fa-trash"></i>
-                                                    {{ "Delete" | localize }}
-                                                </button>-->
+                                    class="btn btn-sm bg-danger mx-2"
+                                    (click)="deleteAttachment(attachment)">
+                                <i class="fas fa-trash"></i>
+                                {{ "Delete" | localize }}
+                            </button>-->
                                             </td>
                                         </tr>
                                     </tbody>
