--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -17,7 +17,7 @@
                     <div class="" style="padding-right: 384px">
 
 
-                        <button style="background-color: #ffc107" *ngIf="((project.status ==-1 || project.status ==4)&& project.contractorId === appSession.userId) || ((project.status ==-1  || project.status ==4) && isGranted('Pages.Roles')) " type="button"
+                        <button style="background-color: #ffc107" *ngIf="((project.status ==-1 || project.status ==4)&& project.contractorId === currentUser.id) || ((project.status ==-1  || project.status ==4) && isGranted('Pages.Roles')) " type="button"
                                 [disabled]="!createUserModal.form.valid || saving"
                                 (click)="save(0)"
                                 class="btn btn-success"
@@ -25,7 +25,7 @@
                             {{ "CONTINUE" | localize }}
                         </button>
 
-                        <button style="background-color: #ffc107" *ngIf="(project.status ==0 && project.consultantId === appSession.userId) || (project.status ==0 && isGranted('Pages.Roles')) " type="button"
+                        <button style="background-color: #ffc107" *ngIf="(project.status ==0 && project.consultantId === currentUser.id) || (project.status ==0 && isGranted('Pages.Roles')) " type="button"
                                 [disabled]="!createUserModal.form.valid || saving"
                                 (click)="save(1)"
                                 class="btn btn-success"
@@ -49,7 +49,7 @@
                             {{ "ProjectRegister" | localize }}
                         </button>
 
-                        <button *ngIf="(project.status ==0 && project.consultantId === appSession.userId)
+                        <button *ngIf="(project.status ==0 && project.consultantId === currentUser.id)
                              || (project.status ==1 && (isGranted('Pages.Manage.LabProjectManager')||  isGranted('Pages.Manage.SupervisingQuality')))
                                     || ((project.status ==1 ||project.status ==2)  && isGranted('Pages.Roles')) " type="button"
                                 [disabled]="!createUserModal.form.valid || saving"
