--- a/angular/src/app/project/project.component.html
+++ b/angular/src/app/project/project.component.html
@@ -129,6 +129,23 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mt-3">
+                                        <div class="form-group row mb-0">
+                                            <label class="col-md-3 col-form-label" for="ADDRESS">
+                                                {{ "Contractor" | localize }}
+                                            </label>
+                                            <div class="col-md-8">
+                                                <select name="contractorId"
+                                                        class="form-control"
+                                                        id="contractorId" [(ngModel)]="contractorId"
+                                                        #contractorIdModel="ngModel">
+                                                    <option *ngFor="let contractor of contractors" [value]="contractor.id">{{contractor.name}}</option>
+                                                </select>
+
+
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
