--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -332,7 +332,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6" *ngIf="hasSample">
+                            <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "TypeofTest" | localize }}
                                 </label>
@@ -341,7 +341,7 @@
                                             class="form-control" [disabled]="request.id>0"
                                             id="testType" [(ngModel)]="request.testType"
                                             #testTypeModel="ngModel"
-                                            #testTypeType required>
+                                            #testTypeType>
                                         <option *ngFor="let inspectionTestType of inspectionTestTypes" [value]="inspectionTestType.id">{{inspectionTestType.name | localize}}</option>
                                     </select>
                                     <abp-validation-summary [control]="testTypeModel"
