--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -421,7 +421,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6" *ngIf="hasSample">
+                            <div class="form-group row required col-6" >
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "TypeofTest" | localize }}
                                 </label>
